@@ -1,6 +1,7 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
 from ..pool import Pool
+from .configuration import *
 from .translation import *
 from .sequence import *
 from .ui.menu import *
@@ -23,6 +24,7 @@ from .session import *
 
 def register():
     Pool.register(
+        Configuration,
         Translation,
         ReportTranslationSetStart,
         ReportTranslationSetSucceed,
